# robot-dog-mock-project

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
agents/: __init__.py  graph.py  langgraph_agent.py  utils.py
agents/tools/: __init__.py  earthquake_rag_tool.py  earthquake_text2sql_tool.py  simple_function.py
command/: example_usage.py  prepare_finetune_dataset.py  store_data_to_vecdb.py  test_retrieval.py
data/: Iga_Narendra_synthetic_data.sql
data/finetune/: metadata.json  train.jsonl  val.jsonl
helpers/: __init__.py  messages.py
prompts/: __init__.py  rag_earthquake_sysprompt.py  react_system.py  text2sql_earthquake_sysprompt.py
