[project]
name = "technical-test-vidavox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "langchain-qdrant>=0.2.0",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.3.11",
    "loguru>=0.7.3",
    "unstructured-client>=0.31.1",
    "unstructured[pdf]>=0.17.0",
]